tests/parser-test-files/bad-files/parse-the.2.error
error: Malformed the expression
  --> test:4:23
   |
 4 |  (define x (the (T -> T)))
   |                         ^ expected value
